# navigation

./: .gitignore  CMakeLists.txt  README.md  code_and_decode_in_chinese.cpp
doc/: README.md  doc.md  nav_model_report.md  report.md  temp_doc.md  (+4 more)
src/: CMakeLists.txt  global_file.h  main.cpp
src/algorithm/: navigation.cpp  navigation.h
src/identity/: student.h
src/logger/: logger.cpp  logger.h
src/model/: model.cpp  model.h
src/model/activity_model/group_collection/: 2020211310_group.txt
src/model/building_model/: building.cpp  building.h  gen_map.cpp
src/model/campus_model/: CMakeLists.txt  building.cpp  building.h  map2.txt
src/model/course_model/: CMakeLists.txt  codetable_hw.txt  course.cpp  course.h  course_model.h  homework.txt  homeworkzip.txt  pinyin.txt
src/model/course_model/course_collection/: 0001  0001_course.txt
src/model/course_model/course_set/: 0001_course.txt  0002_course.txt  0003_course.txt  0004_course.txt  0005_course.txt  0006_course.txt  0007_course.txt  0008_course.txt  0009_course.txt  0010_course.txt  0011_course.txt  0012_course.txt  0018_course.txt
src/model/homework_model/: CMakeLists.txt  homework.cpp  homework.h
src/model/identity_model/: CMakeLists.txt  admin.cpp  admin.h  code.h  code1.h  menu.cpp  menu.h  stu_info.txt  student.cpp  student.h  teacher.cpp  teacher.h  teacher_info.txt
src/model/identity_model/activity_table/: 2020211584_activity_table.txt  2020211588_activity_table.txt  2020211589_activity_table.txt  2020211591_activity_table.txt
src/model/identity_model/course_table/: 111_course_table.txt  2020211584_course_table.txt  2020211586_course_table.txt  2020211588_course_table.txt  2020211590_course_table.txt  2020211591_course_table.txt
src/model/identity_model/group_set/: 2020211309_group.txt  2020211310_group.txt
src/model/identity_model/homework_set/2008211001_teacher/: course_collection.txt
src/model/identity_model/homework_set/2008211002_teacher/: course_collection.txt
src/model/identity_model/material_set/download/: gbn_dow.txt  stopandwait_dow.txt
src/model/identity_model/material_set/upload/: new.txt  new_zip.txt  new_zip_unzip.txt  selective.txt  udp.txt
src/model/navigation_model/: CMakeLists.txt  bike_map1.txt  bike_map2.txt  bike_path1.txt  bike_path2.txt  bonus_algo.cpp  gen_map.cpp  gen_map_crowd.cpp  guide.cpp  guide.h  map1.txt  map1_crowd.txt  map2.txt  map2_crowd.txt  path1.txt  path1_crowd.txt  path2.txt  path2_crowd.txt  path_test.txt  pre_shortest_path.cpp  shortest_path_test_map.txt
src/model/navigation_model/course_table/: 2020211590_course_table.txt  2020211591_course_table.txt
(+15 files in other folders)
